<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vcnCardVisaFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vcn_bg_visa"
    android:padding="16dp"
    tools:layout_height="214dp"
    tools:layout_width="337dp">

    <ImageView
        android:id="@+id/vcnCardVisaAffirmLogo"
        android:layout_width="72dp"
        android:layout_height="28dp"
        android:layout_gravity="top|start"
        app:srcCompat="@drawable/affirm_logo"
        app:tint="@color/affirm_white" />

    <ImageView
        android:id="@+id/informationButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="top|end"
        app:srcCompat="@drawable/ic_circle_info"
        app:tint="@color/affirm_white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".64"
            android:text="@string/card_number"
            android:textAllCaps="true"
            android:textAppearance="@style/AffirmSmall.SemiBold"
            android:textColor="@color/affirm_white"
            android:textSize="12dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/vcnDisplayCardNumberVisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AffirmMono"
            android:textColor="@color/affirm_white"
            android:textSize="20sp"
            tools:text="0123 4567 8901 2345" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".64"
                    android:text="@string/expires"
                    android:textAllCaps="true"
                    android:textAppearance="@style/AffirmSmall.SemiBold"
                    android:textColor="@color/affirm_white"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/vcnDisplayCardExpirationVisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vcn_empty_expiration"
                    android:textAppearance="@style/AffirmMono"
                    android:textColor="@color/affirm_white"
                    android:textSize="16dp"
                    tools:ignore="SpUsage"
                    tools:text="12/20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vcnDisplayCvvSectionVisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".64"
                    android:text="@string/cvv"
                    android:textAllCaps="true"
                    android:textAppearance="@style/AffirmSmall.SemiBold"
                    android:textColor="@color/affirm_white"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/vcnDisplayCardCvvVisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/AffirmMono"
                    android:textColor="@color/affirm_white"
                    android:textIsSelectable="true"
                    android:textSize="16dp"
                    tools:ignore="SpUsage"
                    tools:text="123" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/vcnVisaLogo"
            android:layout_width="72dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/vcn_visa_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>